# project-windburn

./: .env.example  .gitignore  .scratch-time-native-audio-memo.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.capy/: BUILD.md  CAPTAIN.md  REVIEW.md  settings.json
.cargo/: config.toml
config/: codex-profile.example.toml  multica-workbench-codex-profile.example.toml  tool-registry.toml
crates/runtimectl/: Cargo.toml
crates/runtimectl/src/: main.rs
docs/: codex-desktop-communication-profile.md  superconductor-codex-intake.md
runtime-registry/: README.md  hermes-windburn-workhorse-001.json
scripts/: anthropic-bounty-harness.mjs  anthropic-bounty-spec-verify.sh  check.sh  codex-app-server-relay-smoke.mjs  digitalocean-observability.sh  digitalocean-snapshot.sh  droplet-engagement-review.sh  evercore-remote-stage.sh  fusion-bridge-api-smoke.sh  fusion-bridge-api.sh  fusion-bridge-worker-dry-run.sh  fusion-chat-bridge.sh  fusion-chat-preview.sh  hermes-bootstrap.sh  hermes-health-gate.sh  hermes-maintenance.sh  hermes-yolo-loop.sh  mimo-podcast-tts.mjs  multica-codex-cache-janitor.sh  multica-runtime-card-verify.sh  nixos-conversion.sh  nixos-lustrate-reboot.sh  nixos-remote-rebuild.sh  preflight.sh  remote-codex-auth-sync.sh  remote-hermes-codex-smoke.sh  remote-host-proof.sh  remote-provider-smoke.sh  remote-secret-sync.sh  research-appliance-smoke.sh  research-run-card-verify.sh  research-vault-mcp-dogfood.sh  superconductor-codex-intake.sh  superruntime-fixture-verify.sh  windburn-captain-runtime.sh  (+4 more)
(+151 files in other folders)
